--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 	
 <!--	Slider set
 *****************************-->
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6139314255258509"
+     crossorigin="anonymous"></script>
+
 <!-- slider container -->
 	<div class="slider section">
 	<!-- slider item -->
